завершена разметка основных блоков catalog.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       <a class="main-header-logo">
         <img src="img/header-logo.svg" alt="Логотип магазина «Device»">
       </a>
-      <input type="search" name="search" id="" placeholder="Поиск по сайту">
+      <p>Поиск по сайту</p>
+      <!-- здесь будет форма поиска -->
       <ul class="user-nav">
         <li class="login-link">Войти</li>
       </ul>
