--- a/catalog.html
+++ b/catalog.html
@@ -6,10 +6,11 @@
 </head>
 <body>
   <header class="main-header">
-    <a class="main-header-logo">
+    <a class="main-header-logo" href="index.html">
         <img src="img/header-logo.svg" alt="Логотип магазина «Device»">
       </a>
-      <input type="search" name="search" id="" placeholder="Поиск по сайту">
+      <p>Поиск по сайту</p>
+      <!-- здесь будет форма поиска -->
       <ul class="user-nav">
         <li class="login-link">Войти</li>
       </ul>
@@ -96,7 +97,53 @@
           </p>
         </li>
       </ul>
+      <div class="pagination">
+        <ul class="pagination-list">
+          <li class="pagination-item pagination-item-current">1</li>
+          <li class="pagination-item">2</li>
+          <li class="pagination-item">3</li>
+        </ul>
+        <button class="pagination-btn pagination-btn-back">Назад</button>
+        <button class="pagination-btn pagination-btn-back">Вперед</button>
+      </div>
     </section>
+
+    <footer class="main-footer">
+      <a class="footer-logo">
+        <img src="img/footer-logo.svg" alt="Логотип магазина «Device»">
+      </a>
+      <ul class="user-nav">
+        <li class="profile-link">Валентин Петухов</li>
+        <li class="logout-link">Выйти</li>
+      </ul>
+      <p>
+        <a href="#" class="compare-button">Сравнить</a>
+        <a href="#" class="cart-button">Корзина</a>
+      </p>
+      <p class="contact-info">
+        г. Москва, ул. Строителей, 15
+      </p>
+      <ul class="footer-nav">
+        <li><a href="delivery.html">Доставка</a></li>
+        <li><a href="guarantee.html">Гарантия</a></li>
+        <li><a href="contacts.html">Контакты</a></li>
+      </ul>
+      <p class="contact-info">
+        +7(495)495-95-95
+      </p>
+      <div class="footer-social">
+        <ul>
+          <li><a href="http://facebook.com">Фейсбук</a></li>
+          <li><a href="http://instagram.com">Инстаграм</a></li>
+          <li><a href="http://twitter.com">Твиттер</a></li>
+        </ul>
+      </div>
+      <p class="footer-copyright">
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/htmlacademylogo.svg" alt="Логотип HTML Академии">      
+        </a>
+      </p>
+    </footer>
   </main>
 </body>
 </html>
