экспортирована из макета и подключена часть графики

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
 <body>
   <header class="main-header">
     <a class="main-header-logo" href="index.html">
-        <img src="img/header-logo.svg" alt="Логотип магазина «Device»">
+        <img src="img/device-logo.svg" alt="Логотип магазина «Device»" width="163" height="35">
       </a>
       <p>Поиск по сайту</p>
       <!-- здесь будет форма поиска -->
@@ -57,7 +57,7 @@
             <a href="#">Любительская селфи-палка</a>
           </h3>
           <p class="catalog-item-image">
-            <img src="img/product-1.jpg" alt="Любительская селфи-палка" width="360" height="379">
+            <img src="img/product-1.jpg" alt="Любительская селфи-палка" width="360" height="380">
           </p>
           <p class="catalog-item-price">
             500 руб.
@@ -68,7 +68,7 @@
             <a href="#">Профессональная селфи-палка</a>
           </h3>
           <p class="catalog-item-image">
-            <img src="img/product-2.jpg" alt="Профессональная селфи-палка" width="360" height="379">
+            <img src="img/product-2.jpg" alt="Профессональная селфи-палка" width="360" height="380">
           </p>
           <p class="catalog-item-price">
             1 500 руб.
@@ -79,7 +79,7 @@
             <a href="#">Непотопляемая селфи-палка</a>
           </h3>
           <p class="catalog-item-image">
-            <img src="img/product-3.jpg" alt="Непотопляемая селфи-палка" width="360" height="379">
+            <img src="img/product-3.jpg" alt="Непотопляемая селфи-палка" width="360" height="380">
           </p>
           <p class="catalog-item-price">
             2 500 руб.
@@ -90,7 +90,7 @@
             <a href="#">Селфи-палка «Следуй за мной»</a>
           </h3>
           <p class="catalog-item-image">
-            <img src="img/product-4.jpg" alt="Селфи-палка «Следуй за мной»" width="360" height="379">
+            <img src="img/product-4.jpg" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
           </p>
           <p class="catalog-item-price">
             4 900 руб.
@@ -110,7 +110,7 @@
 
     <footer class="main-footer">
       <a class="footer-logo">
-        <img src="img/footer-logo.svg" alt="Логотип магазина «Device»">
+        <img src="img/device-logo.svg" alt="Логотип магазина «Device»" width="163" height="35">
       </a>
       <ul class="user-nav">
         <li class="profile-link">Валентин Петухов</li>
@@ -140,7 +140,7 @@
       </div>
       <p class="footer-copyright">
         <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/htmlacademylogo.svg" alt="Логотип HTML Академии">      
+          <img src="img/html-logo.svg" alt="Логотип HTML Академии" width="27" height="35">      
         </a>
       </p>
     </footer>
