--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header class="main-header">
       <a class="main-header-logo">
-        <img src="img/header-logo.svg" alt="Логотип магазина «Device»">
+        <img src="img/device-logo.svg" width="163" height="35" alt="Логотип магазина «Device»">
       </a>
       <p>Поиск по сайту</p>
       <!-- здесь будет форма поиска -->
@@ -180,17 +180,17 @@
           <div class="services-slide services-slide-1">
             <h3>Доставка</h3>
             <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
-            <img src="img/delivery.svg" alt="Доставка">
+            <img src="img/delivery.svg" alt="Доставка" width="136" height="164">
           </div>
           <div class="services-slide services-slide-2">
             <h3>Гарантия</h3>
             <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
-            <img src="img/guarantee.svg" alt="Гарантия">
+            <img src="img/warranty.svg" alt="Гарантия" width="171" height="194">
           </div>
           <div class="services-slide services-slide-3">
             <h3>Кредит</h3>
             <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
-            <img src="img/credit.svg" alt="Кредит">
+            <img src="img/credit.svg" alt="Кредит" width="156" height="186">
           </div>
         </div>
       </section>
@@ -237,16 +237,18 @@
       <section class="contacts">
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-        <a href="img/map-large.jpg">
-          <img src="img/map.jpg" alt="Карта" class="map-img">
-        </a>
+        <p class="map-wrapper">
+          <a href="img/map-large.jpg">
+            <img src="img/map.jpg" alt="Карта" class="map-img" width="560" height="222">
+          </a>
+        </p>
         <a href="write-us.html" class="button">Напишите нам</a>
       </section>
     </main>
 
     <footer class="main-footer">
       <a class="footer-logo">
-        <img src="img/footer-logo.svg" alt="Логотип магазина «Device»">
+        <img src="img/device-logo.svg" alt="Логотип магазина «Device»" width="163" height="35">
       </a>
       <ul class="user-nav">
         <li class="login-link">Войти</li>
@@ -275,7 +277,7 @@
       </div>
       <p class="footer-copyright">
         <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/htmlacademylogo.svg" alt="Логотип HTML Академии">      
+          <img src="img/html-logo.svg" alt="Логотип HTML Академии" width="27" height="35">
         </a>
       </p>
     </footer>
