Размечены пункты выпадающего меню навигации на главной и в каталоге, размечено модальное окно с картой на главной, подключена графика основного слайдера, раздела "brands" и модального окна с картой на главной

--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
       </p>
       <nav class="main-nav">
         <ul class="site-nav">
-          <li><a href="catalog.html">Каталог товаров</a></li>
+          <li>
+            <a href="catalog.html">Каталог товаров</a>
+            <ul class="sub-menu">
+              <li><a href="catalog.html">Виртуальная реальность</a></li>
+              <li><a href="catalog.html">Моноподы для селфи</a></li>
+              <li><a href="catalog.html">Экшн-камеры</a></li>
+              <li><a href="catalog.html">Фитнес-браслеты</a></li>
+              <li><a href="catalog.html">Умные часы</a></li>
+              <li><a href="catalog.html">Квадрокоптеры</a></li>
+            </ul>
+          </li>
           <li><a href="delivery.html">Доставка</a></li>
           <li><a href="guarantee.html">Гарантия</a></li>
           <li><a href="contacts.html">Контакты</a></li>
@@ -34,7 +44,7 @@
         <h2 class="visually-hidden">Эксклюзив</h2> <!-- может лучше в див? -->
         <div class="slide-item slide-item-1">
           <p class="slide-number">01</p>
-          <img src="img/slide-1.png" alt="Селфи-палка" class="slider-img">
+          <img src="img/slide-1.png" alt="Селфи-палка" class="slider-img" width="384" height="486">
           <dl>
             <dt>Делай селфи как Бен Стиллер!</dt>
             <dd>Самая длинная палка для селфи доступна в нашем магазине.
@@ -64,7 +74,7 @@
 
         <div class="slide-item slide-item-2">
             <p class="slide-number">02</p>
-            <img src="img/slide-2.png" alt="Фитнес-браслет" class="slider-img">
+            <img src="img/slide-2.png" alt="Фитнес-браслет" class="slider-img" width="345" height="485">
             <dl>
               <dt>Худеем правильно!</dt>
               <dd>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</dd>
@@ -88,7 +98,7 @@
 
           <div class="slide-item slide-item-3">
             <p class="slide-number">03</p>
-            <img src="img/slide-3.png" alt="Квадрокоптер" class="slider-img">
+            <img src="img/slide-3.png" alt="Квадрокоптер" class="slider-img" width="526" height="334">
             <dl>
               <dt>Порхает как бабочка, жалит как пчела!</dt>
               <dd>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</dd>
@@ -201,22 +211,22 @@
         <ul class="brand-list">
           <li>
             <a href="http://www.dji.com">
-              <img src="img/logo-1.png" alt="DJI">
+              <img src="img/logo-1.png" alt="DJI" width="260" height="100">
             </a>  
           </li>
           <li>
             <a href="http://www.sp-gadjets.com">
-              <img src="img/logo-2.png" alt="SPGadjets">
+              <img src="img/logo-2.png" alt="SPGadjets" width="260" height="100">
             </a>  
           </li>
           <li>
             <a href="http://www.gopro.com">
-              <img src="img/logo-3.png" alt="GoPro">
+              <img src="img/logo-3.png" alt="GoPro" width="260" height="100">
             </a>  
           </li>
           <li>
             <a href="http://www.vive.com">
-              <img src="img/logo-4.png" alt="Vive">
+              <img src="img/logo-4.png" alt="Vive" width="260" height="100">
             </a>  
           </li>
         </ul>
@@ -286,6 +296,14 @@
       <h2 class="visually-hidden">Форма обратной связи</h2>
       <!-- Здесь будет форма -->
       <button class="button">Отправить</button>
+      <span class="modal-close">х</span>
+    </section>
+
+    <section class="modal modal-map">
+      <h2 class="visually-hidden">Как нас найти</h2>
+      <a href="https://yandex.ru/maps/213/moscow/?ll=37.529654%2C55.686980&mode=search&sll=37.622504%2C55.753215&sspn=1.532593%2C0.493346&text=%D1%83%D0%BB%D0%B8%D1%86%D0%B0%20%D0%A1%D1%82%D1%80%D0%BE%D0%B8%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%2015&z=15">
+        <img src="img/map-big.jpg" alt="Адрес на карте" width="960" height="559">
+      </a>
       <span class="modal-close">х</span>
     </section>
   </body>
