Устранение замечаний наставника: исправил шрифты, переместил footer из main на странице каталога, исправил поведение логотипов при наведении. Добавил маску при наведении на изображение товара.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </ul>
       </nav>
     </header>
-    <main class="container">
+    <main class="main-content">
       <h1 class="visually-hidden">Интернет-магазин «Device»</h1>
 
       <section class="slider">
