--- a/catalog.html
+++ b/catalog.html
@@ -133,9 +133,13 @@
           <h3>
             <a href="#">Любительская селфи-палка</a>
           </h3>
-          <p class="catalog-item-image">
+          <div class="catalog-item-image">
+            <div class="catalog-item-hover">
+              <a href="cart.html" class="button">В корзину</a>
+              <a href="compare.html" class="compare-button">Добавить к сравнению</a>
+            </div>
             <img src="img/product-1.jpg" alt="Любительская селфи-палка" width="360" height="380">
-          </p>
+          </div>
           <p class="catalog-item-price">
             500 руб.
           </p>
@@ -144,9 +148,13 @@
           <h3>
             <a href="#">Профессональная селфи-палка</a>
           </h3>
-          <p class="catalog-item-image">
+          <div class="catalog-item-image">
+            <div class="catalog-item-hover">
+              <a href="cart.html" class="button">В корзину</a>
+              <a href="compare.html" class="compare-button">Добавить к сравнению</a>
+            </div>
             <img src="img/product-2.jpg" alt="Профессональная селфи-палка" width="360" height="380">
-          </p>
+          </div>
           <p class="catalog-item-price">
             1 500 руб.
           </p>
@@ -155,9 +163,13 @@
           <h3>
             <a href="#">Непотопляемая селфи-палка</a>
           </h3>
-          <p class="catalog-item-image">
+          <div class="catalog-item-image">
+            <div class="catalog-item-hover">
+              <a href="cart.html" class="button">В корзину</a>
+              <a href="compare.html" class="compare-button">Добавить к сравнению</a>
+            </div>
             <img src="img/product-3.jpg" alt="Непотопляемая селфи-палка" width="360" height="380">
-          </p>
+          </div>
           <p class="catalog-item-price">
             2 500 руб.
           </p>
@@ -166,9 +178,13 @@
           <h3>
             <a href="#">Селфи-палка «Следуй за мной»</a>
           </h3>
-          <p class="catalog-item-image">
+          <div class="catalog-item-image">
+            <div class="catalog-item-hover">
+              <a href="cart.html" class="button">В корзину</a>
+              <a href="compare.html" class="compare-button">Добавить к сравнению</a>
+            </div>
             <img src="img/product-4.jpg" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
-          </p>
+          </div>
           <p class="catalog-item-price">
             4 900 руб.
           </p>
@@ -184,51 +200,50 @@
         <button type="button" class="pagination-btn pagination-btn-back">Вперед</button>
       </div>
     </section>
-
-    <footer class="main-footer">
-      <a class="footer-logo" href="index.html">
-        <!-- <img src="img/device-logo.svg" alt="Логотип магазина «Device»" width="163" height="35"> -->
-        <svg aria-label="Логотип магазина Device" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 164 35" width="163" height="35">
-          <path d="m0.35 0.7v33.6h13.532a15.723 15.723 0 0 0 11.72-4.824 16.464 16.464 0 0 0 4.712-11.976 16.465 16.465 0 0 0-4.712-11.976 15.723 15.723 0 0 0-11.72-4.824zm7.733 26.208v-18.819h5.8a8.648 8.648 0 0 1 6.5 2.568 9.412 9.412 0 0 1 2.489 6.84 9.41 9.41 0 0 1-2.489 6.84 8.646 8.646 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3h-12.086v-5.567h13.291v-7.389h-21.024v33.6h21.265v-7.392h-13.532v-5.952zm36.343 13.344 11.019-33.6h-8.458l-7.491 24.72-7.491-24.72h-8.457l11.019 33.6zm14.4 0h7.733v-33.6h-7.733zm38.615-1.416a15.514 15.514 0 0 0 6.041-5.688l-6.67-3.84a7.488 7.488 0 0 1-3.165 3.024 9.874 9.874 0 0 1-4.664 1.1 9.594 9.594 0 0 1-7.177-2.736 9.907 9.907 0 0 1-2.682-7.248 9.908 9.908 0 0 1 2.682-7.248 9.594 9.594 0 0 1 7.177-2.736 9.914 9.914 0 0 1 4.64 1.08 7.6 7.6 0 0 1 3.189 3.048l6.67-3.84a15.881 15.881 0 0 0-6.09-5.688 17.419 17.419 0 0 0-8.409-2.088 17.12 17.12 0 0 0-17.592 17.472 17.12 17.12 0 0 0 17.589 17.476 17.519 17.519 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085v-5.567h13.29v-7.389h-21.022v33.6h21.264v-7.392h-13.532v-5.952z"/>
+  </main>
+  <footer class="main-footer">
+    <a class="footer-logo" href="index.html">
+      <!-- <img src="img/device-logo.svg" alt="Логотип магазина «Device»" width="163" height="35"> -->
+      <svg aria-label="Логотип магазина Device" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 164 35" width="163" height="35">
+        <path d="m0.35 0.7v33.6h13.532a15.723 15.723 0 0 0 11.72-4.824 16.464 16.464 0 0 0 4.712-11.976 16.465 16.465 0 0 0-4.712-11.976 15.723 15.723 0 0 0-11.72-4.824zm7.733 26.208v-18.819h5.8a8.648 8.648 0 0 1 6.5 2.568 9.412 9.412 0 0 1 2.489 6.84 9.41 9.41 0 0 1-2.489 6.84 8.646 8.646 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3h-12.086v-5.567h13.291v-7.389h-21.024v33.6h21.265v-7.392h-13.532v-5.952zm36.343 13.344 11.019-33.6h-8.458l-7.491 24.72-7.491-24.72h-8.457l11.019 33.6zm14.4 0h7.733v-33.6h-7.733zm38.615-1.416a15.514 15.514 0 0 0 6.041-5.688l-6.67-3.84a7.488 7.488 0 0 1-3.165 3.024 9.874 9.874 0 0 1-4.664 1.1 9.594 9.594 0 0 1-7.177-2.736 9.907 9.907 0 0 1-2.682-7.248 9.908 9.908 0 0 1 2.682-7.248 9.594 9.594 0 0 1 7.177-2.736 9.914 9.914 0 0 1 4.64 1.08 7.6 7.6 0 0 1 3.189 3.048l6.67-3.84a15.881 15.881 0 0 0-6.09-5.688 17.419 17.419 0 0 0-8.409-2.088 17.12 17.12 0 0 0-17.592 17.472 17.12 17.12 0 0 0 17.589 17.476 17.519 17.519 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085v-5.567h13.29v-7.389h-21.022v33.6h21.264v-7.392h-13.532v-5.952z"/>
+      </svg>
+    </a>
+    <ul class="user-nav">
+      <li class="profile-link footer-profile"><a href="profile.html">Валентин Петухов</a></li>
+      <li class="logout-link footer-logout">
+        <a href="#" class="logout-button">Выйти</a>
+      </li>
+    </ul>
+    <p>
+      <a href="compare.html" class="compare-button">Сравнить</a>
+      <a href="cart.html" class="cart-button">Корзина</a>
+    </p>
+    <p class="contact-info">
+      г. Москва, ул. Строителей, 15
+    </p>
+    <ul class="footer-nav">
+      <li><a href="delivery.html">Доставка</a></li>
+      <li><a href="guarantee.html">Гарантия</a></li>
+      <li><a href="contacts.html">Контакты</a></li>
+    </ul>
+    <p class="contact-info">
+      +7(495)495-95-95
+    </p>
+    <div class="footer-social">
+      <ul>
+        <li><a href="http://facebook.com">Фейсбук</a></li>
+        <li><a href="http://instagram.com">Инстаграм</a></li>
+        <li><a href="http://twitter.com">Твиттер</a></li>
+      </ul>
+    </div>
+    <p class="footer-copyright">
+      <a href="https://htmlacademy.ru/intensive/htmlcss">
+        <!-- <img src="img/html-logo.svg" alt="Логотип HTML Академии" width="27" height="35">       -->
+        <svg aria-label="Логотип HTML Академии" xmlns="http://www.w3.org/2000/svg" width="26.943" height="34.09" viewBox="0 0 26.943 34.09">
+          <path fill="#FFC600" d="M13.62.017L13.472 0 0 1.412v24.661l13.473 8.017 13.43-7.99.042-.025V1.412L13.62.017zm11.399 12.11L13.495 5.334l-.001-.104-.087.05-.088-.056v.109L1.925 12.118V3.147l11.548-1.212L25.02 3.147v8.98zm-11.614-5.34L24.923 13.5l-4.479 2.64-7.093-4.221-.014 1.415 5.904 3.513-.86.507-5.03-2.992-.014 1.415 3.827 2.275-.782.523-3.031-1.787-.014 1.413 1.853 1.091-1.8 1.081-11.356-6.751 11.371-6.835zm-11.48 8.34l11.411 6.791.016 1.044-7.942-4.728-.015 1.416 7.979 4.795.018 1.076-7.973-4.74-.013 1.414 8.021 4.822.046.025 8.143-4.872-.011-5.177 3.415-2.036v10.021L13.472 31.85 1.925 24.979v-9.852z"/>
         </svg>
       </a>
-      <ul class="user-nav">
-        <li class="profile-link footer-profile"><a href="profile.html">Валентин Петухов</a></li>
-        <li class="logout-link footer-logout">
-          <a href="#" class="logout-button">Выйти</a>
-        </li>
-      </ul>
-      <p>
-        <a href="compare.html" class="compare-button">Сравнить</a>
-        <a href="cart.html" class="cart-button">Корзина</a>
-      </p>
-      <p class="contact-info">
-        г. Москва, ул. Строителей, 15
-      </p>
-      <ul class="footer-nav">
-        <li><a href="delivery.html">Доставка</a></li>
-        <li><a href="guarantee.html">Гарантия</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-      </ul>
-      <p class="contact-info">
-        +7(495)495-95-95
-      </p>
-      <div class="footer-social">
-        <ul>
-          <li><a href="http://facebook.com">Фейсбук</a></li>
-          <li><a href="http://instagram.com">Инстаграм</a></li>
-          <li><a href="http://twitter.com">Твиттер</a></li>
-        </ul>
-      </div>
-      <p class="footer-copyright">
-        <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <!-- <img src="img/html-logo.svg" alt="Логотип HTML Академии" width="27" height="35">       -->
-          <svg aria-label="Логотип HTML Академии" xmlns="http://www.w3.org/2000/svg" width="26.943" height="34.09" viewBox="0 0 26.943 34.09">
-            <path fill="#FFC600" d="M13.62.017L13.472 0 0 1.412v24.661l13.473 8.017 13.43-7.99.042-.025V1.412L13.62.017zm11.399 12.11L13.495 5.334l-.001-.104-.087.05-.088-.056v.109L1.925 12.118V3.147l11.548-1.212L25.02 3.147v8.98zm-11.614-5.34L24.923 13.5l-4.479 2.64-7.093-4.221-.014 1.415 5.904 3.513-.86.507-5.03-2.992-.014 1.415 3.827 2.275-.782.523-3.031-1.787-.014 1.413 1.853 1.091-1.8 1.081-11.356-6.751 11.371-6.835zm-11.48 8.34l11.411 6.791.016 1.044-7.942-4.728-.015 1.416 7.979 4.795.018 1.076-7.973-4.74-.013 1.414 8.021 4.822.046.025 8.143-4.872-.011-5.177 3.415-2.036v10.021L13.472 31.85 1.925 24.979v-9.852z"/>
-          </svg>
-        </a>
-      </p>
-    </footer>
-  </main>
+    </p>
+  </footer>
 </body>
 </html>
