--- a/catalog.html
+++ b/catalog.html
@@ -79,7 +79,19 @@
         <form class="filter" action="https://echo.htmlacademy.ru" method="get">
           <fieldset class="range">
             <legend>Стоимость</legend>
-            <!-- здесь должен быть ползунок -->
+            <div class="range-filter">
+              <div class="range-controls">
+                <div class="scale">
+                  <div class="bar"></div>
+                </div>
+                <div class="toggle toggle-min"></div>
+                <div class="toggle toggle-max"></div>
+              </div>
+              <div class="price-controls">
+                <label class="min-price">от <input type="text" name="min-price" value="0" disabled></label>
+                <label class="max-price">до <input type="text" name="max-price" value="5000" disabled></label>
+              </div>
+            </div>
           </fieldset>
           <fieldset>
             <legend>Цвет</legend>
@@ -117,7 +129,7 @@
             <li class="filter-option">
               <input type="radio" name="bluetooth" id="bluetooth-yes" value="yes"
               class="visually-hidden filter-input filter-input-radio" checked>
-              <label for="bluetooth-yes">Да</label>
+              <label for="bluetooth-yes">Есть</label>
             </li>
             <li class="filter-option">
               <input type="radio" name="bluetooth" id="bluetooth-no" value="no"
@@ -136,13 +148,13 @@
       <div class="sort">
         <h3>Сортировка:</h3>
         <ul class="sort-type">
-          <li><a class="sort-item" href="#">По цене</a></li>
+          <li><a class="sort-item sort-item-current" href="#">По цене</a></li>
           <li><a class="sort-item" href="#">По типу</a></li>
           <li><a class="sort-item" href="#">По популярности</a></li>
         </ul>
         <ul>
           <li><a class="sort-order sort-ascend" href="#"><span class="visually-hidden"></span></a></li>
-          <li><a class="sort-order sort-descend" href="#"><span class="visually-hidden">По убыванию</span></a></li>
+          <li><a class="sort-order sort-descend sort-order-current" href="#"><span class="visually-hidden">По убыванию</span></a></li>
         </ul>
       </div>
       
@@ -168,7 +180,7 @@
         <li class="catalog-item">
           <div class="title-price-wrapper">
             <h3>
-              <a href="#">Профессиональная селфи-палка</a>
+              <a href="#">Профессиональная<br> селфи-палка</a>
             </h3>
             <p class="catalog-item-price">
               1 500 руб.
@@ -260,7 +272,7 @@
           <li><a href="contacts.html">Контакты</a></li>
         </ul>
         <p class="contact-info">
-          +7(495)495-95-95
+          Тел.: +7(495)495-95-95
         </p>
       </div>
       <div class="footer-bottom">
