Завершена верстка основных и дополнительных блоков проекта. Исправлены ошибки валидации html

--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
       </a>
       <div class="header-middle-wrapper">
 
-        <form action="" method="GET" class="search">
+        <form action="https://echo.htmlacademy.ru" method="GET" class="search">
           <input type="search" name="search" id="search" placeholder="Поиск по сайту" aria-label="Поиск по сайту">
           <button type="submit">Найти</button>
         </form>
