Добавлены минифицированные стили и скрипты.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>Интернет-магазин «Девайс»</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.24.0/babel.js"></script>   
+    <link rel="stylesheet" href="css/style-min.css">   
   </head>
   <body>
     <header class="main-header container">
@@ -370,6 +369,6 @@
       </a>
       <button type="button" class="modal-close" aria-label="Закрыть карту">х</button>
     </section>
-    <script src="js/main.js"></script>
+    <script src="js/main-min.js"></script>
   </body>
 </html>
