Поправлены стили секции categories на главной

--- a/index.html
+++ b/index.html
@@ -155,37 +155,37 @@
         <ul class="categories-list">
           <li class="category">
             <a href="catalog.html" class="category-link">
-              <img src="img/category-1.svg" alt="Виртуальная реальность" width="97" height="55" class="category-img">
+              <img src="img/category-1.svg" alt="Виртуальная реальность" width="97" height="55" class="category-img category-1">
             </a>
             <h3 class="category-title">Виртуальная реальность</h3>
           </li>
           <li class="category">
             <a href="catalog.html" class="category-link">
-              <img src="img/category-2.svg" alt="Моноподы для селфи" width="86" height="117" class="category-img">
+              <img src="img/category-2.svg" alt="Моноподы для селфи" width="86" height="117" class="category-img category-2">
             </a>
             <h3 class="category-title">Моноподы для&nbsp;селфи</h3>
           </li>
           <li class="category">
             <a href="catalog.html" class="category-link">
-              <img src="img/category-3.svg" alt="Экшн-камеры" width="71" height="87" class="category-img">
+              <img src="img/category-3.svg" alt="Экшн-камеры" width="71" height="87" class="category-img category-3">
             </a>
             <h3 class="category-title">Экшн-камеры</h3>
           </li>
           <li class="category">
             <a href="catalog.html" class="category-link">
-              <img src="img/category-4.svg" alt="Фитнес-браслеты" width="107" height="65" class="category-img">
+              <img src="img/category-4.svg" alt="Фитнес-браслеты" width="107" height="65" class="category-img category-4">
             </a>
             <h3 class="category-title">Фитнес-браслеты</h3>
           </li>
           <li class="category">
             <a href="catalog.html" class="category-link">
-              <img src="img/category-5.svg" alt="Умные часы" width="56" height="98" class="category-img">
+              <img src="img/category-5.svg" alt="Умные часы" width="56" height="98" class="category-img category-5">
             </a>
             <h3 class="category-title">Умные часы</h3>
           </li>
           <li class="category">
             <a href="catalog.html" class="category-link">
-              <img src="img/category-6.svg" alt="Квадрокоптеры" width="132" height="69" class="category-img">
+              <img src="img/category-6.svg" alt="Квадрокоптеры" width="132" height="69" class="category-img category-6">
             </a>
             <h3 class="category-title">Квадрокоптеры</h3>
           </li>
