--- a/index.html
+++ b/index.html
@@ -363,10 +363,8 @@
 
     <section class="modal modal-map">
       <h2 class="visually-hidden">Как нас найти</h2>
-      <a href="https://yandex.ru/maps/213/moscow/?ll=37.529654%2C55.686980&mode=search&sll=37.622504%2C55.753215&sspn=1.532593%2C0.493346&text=%D1%83%D0%BB%D0%B8%D1%86%D0%B0%20%D0%A1%D1%82%D1%80%D0%BE%D0%B8%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%2015&z=15">
-        <iframe src="https://yandex.ru/map-widget/v1/-/CCSNf62z" width="960" height="559" frameborder="1" allowfullscreen="true"></iframe>
-        <img src="img/map-big.jpg" alt="Офис компании по адресу ул. Строителей 15, Москва" width="960" height="559">
-      </a>
+      <iframe src="https://yandex.ru/map-widget/v1/-/CCSNf62z" width="960" height="559"></iframe>
+      <img src="img/map-big.jpg" alt="Офис компании по адресу ул. Строителей 15, Москва" width="960" height="559">
       <button type="button" class="modal-close" aria-label="Закрыть карту">х</button>
     </section>
     <script src="js/main-min.js"></script>
