Исправлены ошибки валидации (не были закрыты 2 тега button)

--- a/catalog.html
+++ b/catalog.html
@@ -82,8 +82,8 @@
                       <div class="scale">
                         <div class="bar"></div>
                       </div>
-                      <button type="button" class="toggle toggle-min">
-                      <button type="button" class="toggle toggle-max">
+                      <button type="button" class="toggle toggle-min"></button>
+                      <button type="button" class="toggle toggle-max"></button>
                     </div>
                     <div class="price-controls">
                       <label class="min-price">от <input type="text" name="min-price" value="0" disabled></label>
