--- a/index.html
+++ b/index.html
@@ -263,22 +263,18 @@
         <section class="about">
           <h2>О нас</h2>
           <p class="about-description">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-          <div class="about-delivery">
-            <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
-            <ul class="delivery-list">
-              <li class="delivery-list-item">Деловые Линии</li>
-              <li class="delivery-list-item">Автотрейдинг</li>
-              <li class="delivery-list-item">ЖелДорЭкспедиция</li>
-            </ul>
-          </div>
+          <p class="about-delivery">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+          <ul class="delivery-list">
+            <li class="delivery-list-item">Деловые Линии</li>
+            <li class="delivery-list-item">Автотрейдинг</li>
+            <li class="delivery-list-item">ЖелДорЭкспедиция</li>
+          </ul>
           <a href="#" class="button">Подробнее о нас</a>
         </section>
 
         <section class="contacts">
         <h2>Контакты</h2>
-        <div class="contacts-description">
-          <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-        </div>
+        <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
         <a class="map-wrapper" href="https://yandex.ru/maps/213/moscow/?ll=37.529654%2C55.686980&mode=search&sll=37.907036%2C55.660744&sspn=0.023947%2C0.007727&text=%D0%BC%D0%BE%D1%81%D0%BA%D0%B2%D0%B0%20%D1%81%D1%82%D1%80%D0%BE%D0%B8%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%2015&z=16">
           <img src="img/map.jpg" alt="Карта" class="map-img" width="560" height="222">
         </a>
